wacc_examples/valid_TEST/if/ifReturn3_US.wacc
# if returning on 'then' branch and end of function

# Output:
# correct

# Program:

begin
  int f() is
    if true
    then
      return 1
    else 
      println 2
    fi;
    return 0
  end
  int x = call f() ;
  println x 
end

