wacc_examples/invalid_TEST/syntaxErr/if/ifSynReturnError2.wacc
# if only 'true' branch returns a value

# Output:
# #syntactic_error#

# Exit:
# 100

# Program:

begin
  int f() is
    if true
    then
      return 1
    else 
      println 2
    fi
  end
  int x = call f() ;
  println x 
end
